# serializer version: 1
# name: TestCastEndpoints.test_epidata_archive[nssp-pct_ed_visits_influenza-hhs]
  '''
  signal,version,geo_type,geo_value,fill_method,time_value,value
  pct_ed_visits_influenza,2024-04-18,hhs,1,ave,2022-10-01,0.09050202359301114
  pct_ed_visits_influenza,2024-04-18,hhs,1,zero,2022-10-01,0.08464965473741994
  pct_ed_visits_influenza,2024-12-20,hhs,1,ave,2022-10-01,0.08982290368142035
  pct_ed_visits_influenza,2024-12-20,hhs,1,zero,2022-10-01,0.08982290368142035
  pct_ed_visits_influenza,2024-04-18,hhs,1,ave,2022-10-08,0.1369991373252795
  pct_ed_visits_influenza,2024-04-18,hhs,1,zero,2022-10-08,0.1281400040960503
  pct_ed_visits_influenza,2024-12-20,hhs,1,ave,2022-10-08,0.14365975092805155
  pct_ed_visits_influenza,2024-12-20,hhs,1,zero,2022-10-08,0.14365975092805155
  pct_ed_visits_influenza,2024-04-18,hhs,1,ave,2022-10-15,0.16715574639515796
  pct_ed_visits_influenza,2024-04-18,hhs,1,zero,2022-10-15,0.15634651754702344
  
  '''
# ---
# name: TestCastEndpoints.test_epidata_archive[nssp-pct_ed_visits_influenza-state]
  '''
  signal,version,geo_type,geo_value,fill_method,time_value,value
  pct_ed_visits_influenza,2024-04-18,state,ak,source,2022-10-01,0.14000000059604645
  pct_ed_visits_influenza,2024-04-18,state,ak,source,2022-10-08,0.23999999463558197
  pct_ed_visits_influenza,2024-04-18,state,ak,source,2022-10-15,0.3199999928474426
  pct_ed_visits_influenza,2024-04-18,state,ak,source,2022-10-22,0.7599999904632568
  pct_ed_visits_influenza,2024-04-18,state,ak,source,2022-10-29,1.1699999570846558
  pct_ed_visits_influenza,2024-08-30,state,ak,source,2022-10-29,1.159999966621399
  pct_ed_visits_influenza,2024-04-18,state,ak,source,2022-11-05,1.9500000476837158
  pct_ed_visits_influenza,2024-05-17,state,ak,source,2022-11-05,1.940000057220459
  pct_ed_visits_influenza,2024-04-18,state,ak,source,2022-11-12,3.7300000190734863
  pct_ed_visits_influenza,2024-04-18,state,ak,source,2022-11-19,6.820000171661377
  
  '''
# ---
# name: TestCastEndpoints.test_epidata_archive[nwss-covid_avg_conc-sewershed]
  '''
  signal,version,geo_type,geo_value,fill_method,time_value,value,nwss_source,sample_index,pcr_target
  covid_avg_conc,2026-02-25,sewershed,10,source,2022-12-13,522944.27539,cdc_biobot,5639533,sars-cov-2
  covid_avg_conc,2026-02-27,sewershed,10,source,2022-12-13,522944.27539,cdc_biobot,5639533,sars-cov-2
  covid_avg_conc,2026-03-06,sewershed,10,source,2022-12-13,522944.27539,CDC_Biobot,5639533,sars-cov-2
  covid_avg_conc,2026-03-13,sewershed,10,source,2022-12-13,522944.27539,CDC_Biobot,5639533,sars-cov-2
  covid_avg_conc,2026-03-20,sewershed,10,source,2022-12-13,522944.27539,CDC_Biobot,5639533,sars-cov-2
  covid_avg_conc,2026-03-27,sewershed,10,source,2022-12-13,522944.27539,CDC_Biobot,5639533,sars-cov-2
  covid_avg_conc,2026-04-03,sewershed,10,source,2022-12-13,522944.27539,CDC_Biobot,5639533,sars-cov-2
  covid_avg_conc,2026-02-25,sewershed,10,source,2022-12-15,123424.0589,cdc_biobot,5891694,sars-cov-2
  covid_avg_conc,2026-02-27,sewershed,10,source,2022-12-15,123424.0589,cdc_biobot,5891694,sars-cov-2
  covid_avg_conc,2026-03-06,sewershed,10,source,2022-12-15,123424.0589,CDC_Biobot,5891694,sars-cov-2
  
  '''
# ---
# name: TestCastEndpoints.test_epidata_archive[pophive-flu_n_ed-hhs]
  '''
  signal,version,geo_type,geo_value,fill_method,time_value,value,age_group
  flu_n_ed,2026-04-21,hhs,1,zero,2018-01-13,30.0,0-1
  flu_n_ed,2026-04-21,hhs,1,zero,2018-01-13,160.0,50-65
  flu_n_ed,2026-04-21,hhs,1,zero,2018-01-13,315.0,18-50
  flu_n_ed,2026-04-21,hhs,1,zero,2018-01-13,65.0,1-5
  flu_n_ed,2026-04-21,hhs,1,ave,2018-01-13,30.0,0-1
  flu_n_ed,2026-04-21,hhs,1,ave,2018-01-13,160.0,50-65
  flu_n_ed,2026-04-21,hhs,1,ave,2018-01-13,315.0,18-50
  flu_n_ed,2026-04-21,hhs,1,ave,2018-01-13,65.0,1-5
  flu_n_ed,2026-04-21,hhs,1,zero,2018-01-13,286.0,65+
  flu_n_ed,2026-04-21,hhs,1,zero,2018-01-13,105.0,5-18
  
  '''
# ---
# name: TestCastEndpoints.test_epidata_archive[pophive-flu_n_ed-nation]
  '''
  signal,version,geo_type,geo_value,fill_method,time_value,value,age_group
  flu_n_ed,2026-04-21,nation,us,source,2018-01-13,4884.0,5-18
  flu_n_ed,2026-04-21,nation,us,source,2018-01-13,4255.0,1-5
  flu_n_ed,2026-04-21,nation,us,source,2018-01-13,30188.0,all
  flu_n_ed,2026-04-21,nation,us,source,2018-01-13,9842.0,18-50
  flu_n_ed,2026-04-21,nation,us,source,2018-01-13,4206.0,50-65
  flu_n_ed,2026-04-21,nation,us,source,2018-01-13,5673.0,65+
  flu_n_ed,2026-04-21,nation,us,source,2018-01-13,1328.0,0-1
  flu_n_ed,2026-04-28,nation,us,source,2018-01-13,30195.0,all
  flu_n_ed,2026-04-28,nation,us,source,2018-01-13,9850.0,18-50
  flu_n_ed,2026-04-28,nation,us,source,2018-01-13,4205.0,50-65
  
  '''
# ---
# name: TestCastEndpoints.test_epidata_archive[pophive-flu_n_ed-state]
  '''
  signal,version,geo_type,geo_value,fill_method,time_value,value,age_group
  flu_n_ed,2026-04-21,state,ak,source,2018-01-13,5.0,50-65
  flu_n_ed,2026-04-21,state,ak,source,2018-01-13,5.0,5-18
  flu_n_ed,2026-04-21,state,ak,source,2018-01-13,5.0,0-1
  flu_n_ed,2026-04-21,state,ak,source,2018-01-13,5.0,65+
  flu_n_ed,2026-04-21,state,ak,source,2018-01-13,5.0,18-50
  flu_n_ed,2026-04-21,state,ak,source,2018-01-13,5.0,1-5
  flu_n_ed,2026-04-21,state,ak,source,2018-01-13,5.0,all
  flu_n_ed,2026-04-21,state,ak,source,2018-01-20,5.0,all
  flu_n_ed,2026-04-21,state,ak,source,2018-01-20,5.0,50-65
  flu_n_ed,2026-04-21,state,ak,source,2018-01-20,5.0,65+
  
  '''
# ---
# name: TestCastEndpoints.test_epidata_archive[pophive-flu_pct_ed-hhs]
  '''
  signal,version,geo_type,geo_value,fill_method,time_value,value,age_group
  flu_pct_ed,2026-03-11,hhs,1,ave,2018-01-07,3.613360649322302,1-5
  flu_pct_ed,2026-03-11,hhs,1,ave,2018-01-07,5.183678744467702,0-1
  flu_pct_ed,2026-03-11,hhs,1,ave,2018-01-07,0.3099691252955461,18-50
  flu_pct_ed,2026-03-11,hhs,1,ave,2018-01-07,0.6255264155834762,50-65
  flu_pct_ed,2026-03-11,hhs,1,ave,2018-01-07,1.7366815222895622,5-18
  flu_pct_ed,2026-03-11,hhs,1,ave,2018-01-07,0.4409809995217855,65+
  flu_pct_ed,2026-03-11,hhs,1,ave,2018-01-07,0.11990483296347473,all
  flu_pct_ed,2026-03-12,hhs,1,ave,2018-01-07,5.146355026971381,1-5
  flu_pct_ed,2026-03-12,hhs,1,ave,2018-01-07,1.9893099734181645,18-50
  flu_pct_ed,2026-03-12,hhs,1,ave,2018-01-07,1.8506679805240744,50-65
  
  '''
# ---
# name: TestCastEndpoints.test_epidata_archive[pophive-flu_pct_ed-state]
  '''
  signal,version,geo_type,geo_value,fill_method,time_value,value,age_group
  flu_pct_ed,2026-03-11,state,ak,source,2018-01-07,7.936507936507937,all
  flu_pct_ed,2026-03-11,state,ak,source,2018-01-07,100.0,1-5
  flu_pct_ed,2026-03-11,state,ak,source,2018-01-07,20.83333333333333,18-50
  flu_pct_ed,2026-03-11,state,ak,source,2018-01-07,100.0,65+
  flu_pct_ed,2026-03-11,state,ak,source,2018-01-07,100.0,5-18
  flu_pct_ed,2026-03-11,state,ak,source,2018-01-07,100.0,0-1
  flu_pct_ed,2026-03-11,state,ak,source,2018-01-07,33.333333333333336,50-65
  flu_pct_ed,2026-03-20,state,ak,source,2018-01-13,18.51851851851852,18-50
  flu_pct_ed,2026-03-20,state,ak,source,2018-01-13,26.31578947368421,50-65
  flu_pct_ed,2026-03-20,state,ak,source,2018-01-13,41.666666666666664,65+
  
  '''
# ---
# name: TestCastEndpoints.test_epidata_snapshot[nssp-pct_ed_visits_influenza-hhs]
  '''
  signal,version,geo_type,geo_value,fill_method,time_value,value
  pct_ed_visits_influenza,2024-12-20,hhs,1,zero,2022-10-01,0.08982290368142035
  pct_ed_visits_influenza,2024-12-20,hhs,1,ave,2022-10-01,0.08982290368142035
  pct_ed_visits_influenza,2024-12-20,hhs,1,zero,2022-10-08,0.14365975092805155
  pct_ed_visits_influenza,2024-12-20,hhs,1,ave,2022-10-08,0.14365975092805155
  pct_ed_visits_influenza,2024-12-20,hhs,1,zero,2022-10-15,0.180272794756169
  pct_ed_visits_influenza,2024-12-20,hhs,1,ave,2022-10-15,0.180272794756169
  pct_ed_visits_influenza,2025-12-17,hhs,1,zero,2022-10-22,0.24848457885381936
  pct_ed_visits_influenza,2025-12-17,hhs,1,ave,2022-10-22,0.24848457885381936
  pct_ed_visits_influenza,2024-12-20,hhs,1,zero,2022-10-29,0.5505503669147604
  pct_ed_visits_influenza,2024-12-20,hhs,1,ave,2022-10-29,0.5505503669147604
  
  '''
# ---
# name: TestCastEndpoints.test_epidata_snapshot[nssp-pct_ed_visits_influenza-state]
  '''
  signal,version,geo_type,geo_value,fill_method,time_value,value
  pct_ed_visits_influenza,2024-04-18,state,ak,source,2022-10-01,0.14000000059604645
  pct_ed_visits_influenza,2024-04-18,state,ak,source,2022-10-08,0.23999999463558197
  pct_ed_visits_influenza,2024-04-18,state,ak,source,2022-10-15,0.3199999928474426
  pct_ed_visits_influenza,2024-04-18,state,ak,source,2022-10-22,0.7599999904632568
  pct_ed_visits_influenza,2024-08-30,state,ak,source,2022-10-29,1.159999966621399
  pct_ed_visits_influenza,2024-05-17,state,ak,source,2022-11-05,1.940000057220459
  pct_ed_visits_influenza,2024-04-18,state,ak,source,2022-11-12,3.7300000190734863
  pct_ed_visits_influenza,2024-04-18,state,ak,source,2022-11-19,6.820000171661377
  pct_ed_visits_influenza,2024-04-18,state,ak,source,2022-11-26,8.670000076293945
  pct_ed_visits_influenza,2024-04-18,state,ak,source,2022-12-03,9.850000381469727
  
  '''
# ---
# name: TestCastEndpoints.test_epidata_snapshot[nwss-covid_avg_conc-sewershed]
  '''
  signal,version,geo_type,geo_value,fill_method,time_value,value,nwss_source,sample_index,pcr_target
  covid_avg_conc,2026-04-03,sewershed,10,source,2022-12-13,522944.27539,CDC_Biobot,5639533,sars-cov-2
  covid_avg_conc,2026-04-03,sewershed,10,source,2022-12-15,123424.0589,CDC_Biobot,5891694,sars-cov-2
  covid_avg_conc,2026-04-03,sewershed,10,source,2022-12-20,498118.74185,CDC_Biobot,5738876,sars-cov-2
  covid_avg_conc,2026-04-03,sewershed,10,source,2022-12-27,304154.9726,CDC_Biobot,5784427,sars-cov-2
  covid_avg_conc,2026-04-03,sewershed,10,source,2022-12-29,1083941.95331,CDC_Biobot,5721256,sars-cov-2
  covid_avg_conc,2026-04-03,sewershed,10,source,2023-01-03,1138991.35472,CDC_Biobot,5778681,sars-cov-2
  covid_avg_conc,2026-04-03,sewershed,10,source,2023-01-05,304258.89957,CDC_Biobot,5632312,sars-cov-2
  covid_avg_conc,2026-04-03,sewershed,10,source,2023-01-10,308297.42014,CDC_Biobot,5719024,sars-cov-2
  covid_avg_conc,2026-04-03,sewershed,10,source,2023-01-12,398995.58974,CDC_Biobot,5736533,sars-cov-2
  covid_avg_conc,2026-04-03,sewershed,10,source,2023-01-19,230398.86689,CDC_Biobot,5631090,sars-cov-2
  
  '''
# ---
# name: TestCastEndpoints.test_epidata_snapshot[pophive-flu_n_ed-hhs]
  '''
  signal,version,geo_type,geo_value,fill_method,time_value,value,age_group
  flu_n_ed,2026-04-21,hhs,1,zero,2018-01-13,30.0,0-1
  flu_n_ed,2026-04-21,hhs,1,zero,2018-01-13,160.0,50-65
  flu_n_ed,2026-04-21,hhs,1,zero,2018-01-13,315.0,18-50
  flu_n_ed,2026-04-21,hhs,1,zero,2018-01-13,65.0,1-5
  flu_n_ed,2026-04-21,hhs,1,ave,2018-01-13,30.0,0-1
  flu_n_ed,2026-04-21,hhs,1,ave,2018-01-13,160.0,50-65
  flu_n_ed,2026-04-21,hhs,1,ave,2018-01-13,315.0,18-50
  flu_n_ed,2026-04-21,hhs,1,ave,2018-01-13,65.0,1-5
  flu_n_ed,2026-04-28,hhs,1,zero,2018-01-13,285.0,65+
  flu_n_ed,2026-04-28,hhs,1,zero,2018-01-13,106.0,5-18
  
  '''
# ---
# name: TestCastEndpoints.test_epidata_snapshot[pophive-flu_n_ed-nation]
  '''
  signal,version,geo_type,geo_value,fill_method,time_value,value,age_group
  flu_n_ed,2026-04-21,nation,us,source,2018-01-13,4884.0,5-18
  flu_n_ed,2026-04-21,nation,us,source,2018-01-13,4255.0,1-5
  flu_n_ed,2026-04-28,nation,us,source,2018-01-13,30195.0,all
  flu_n_ed,2026-04-28,nation,us,source,2018-01-13,9850.0,18-50
  flu_n_ed,2026-04-28,nation,us,source,2018-01-13,4205.0,50-65
  flu_n_ed,2026-04-28,nation,us,source,2018-01-13,5674.0,65+
  flu_n_ed,2026-04-28,nation,us,source,2018-01-13,1327.0,0-1
  flu_n_ed,2026-04-28,nation,us,source,2018-01-20,9840.0,18-50
  flu_n_ed,2026-04-28,nation,us,source,2018-01-20,3939.0,50-65
  flu_n_ed,2026-04-28,nation,us,source,2018-01-20,1416.0,0-1
  
  '''
# ---
# name: TestCastEndpoints.test_epidata_snapshot[pophive-flu_n_ed-state]
  '''
  signal,version,geo_type,geo_value,fill_method,time_value,value,age_group
  flu_n_ed,2026-04-21,state,ak,source,2018-01-13,5.0,50-65
  flu_n_ed,2026-04-21,state,ak,source,2018-01-13,5.0,5-18
  flu_n_ed,2026-04-21,state,ak,source,2018-01-13,5.0,0-1
  flu_n_ed,2026-04-21,state,ak,source,2018-01-13,5.0,65+
  flu_n_ed,2026-04-21,state,ak,source,2018-01-13,5.0,18-50
  flu_n_ed,2026-04-21,state,ak,source,2018-01-13,5.0,1-5
  flu_n_ed,2026-04-21,state,ak,source,2018-01-13,5.0,all
  flu_n_ed,2026-04-21,state,ak,source,2018-01-20,5.0,all
  flu_n_ed,2026-04-21,state,ak,source,2018-01-20,5.0,50-65
  flu_n_ed,2026-04-21,state,ak,source,2018-01-20,5.0,65+
  
  '''
# ---
# name: TestCastEndpoints.test_epidata_snapshot[pophive-flu_pct_ed-hhs]
  '''
  signal,version,geo_type,geo_value,fill_method,time_value,value,age_group
  flu_pct_ed,2026-03-11,hhs,1,ave,2018-01-07,5.183678744467702,0-1
  flu_pct_ed,2026-03-12,hhs,1,ave,2018-01-07,5.146355026971381,1-5
  flu_pct_ed,2026-03-12,hhs,1,ave,2018-01-07,1.9893099734181645,18-50
  flu_pct_ed,2026-03-12,hhs,1,ave,2018-01-07,1.8506679805240744,50-65
  flu_pct_ed,2026-03-12,hhs,1,ave,2018-01-07,2.799196369378169,5-18
  flu_pct_ed,2026-03-12,hhs,1,ave,2018-01-07,2.7569760078002212,65+
  flu_pct_ed,2026-03-12,hhs,1,ave,2018-01-07,2.1094004359364225,all
  flu_pct_ed,2026-04-28,hhs,1,zero,2018-01-13,2.399591794375735,all
  flu_pct_ed,2026-04-28,hhs,1,zero,2018-01-13,2.1211850488363666,18-50
  flu_pct_ed,2026-04-28,hhs,1,zero,2018-01-13,3.334883155411474,5-18
  
  '''
# ---
# name: TestCastEndpoints.test_epidata_snapshot[pophive-flu_pct_ed-state]
  '''
  signal,version,geo_type,geo_value,fill_method,time_value,value,age_group
  flu_pct_ed,2026-03-11,state,ak,source,2018-01-07,7.936507936507937,all
  flu_pct_ed,2026-03-11,state,ak,source,2018-01-07,100.0,1-5
  flu_pct_ed,2026-03-11,state,ak,source,2018-01-07,20.83333333333333,18-50
  flu_pct_ed,2026-03-11,state,ak,source,2018-01-07,100.0,65+
  flu_pct_ed,2026-03-11,state,ak,source,2018-01-07,100.0,5-18
  flu_pct_ed,2026-03-11,state,ak,source,2018-01-07,100.0,0-1
  flu_pct_ed,2026-03-11,state,ak,source,2018-01-07,33.333333333333336,50-65
  flu_pct_ed,2026-03-20,state,ak,source,2018-01-13,100.0,5-18
  flu_pct_ed,2026-03-20,state,ak,source,2018-01-13,100.0,0-1
  flu_pct_ed,2026-03-20,state,ak,source,2018-01-13,100.0,1-5
  
  '''
# ---
